add material module

--- a/projects/vedrax-material-utility/package.json
+++ b/projects/vedrax-material-utility/package.json
@@ -3,9 +3,18 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^14.1.0",
-    "@angular/core": "^14.1.0"
+    "@angular/core": "^14.1.0",
+    "@angular/material": "^14.2.1"
   },
   "dependencies": {
     "tslib": "^2.3.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": {
+    "name": "Remy Penchenat",
+    "email": "finance@vedrax.com",
+    "url": "https://www.vedrax.com"
   }
 }
