--- a/projects/vedrax-material-utility/package.json
+++ b/projects/vedrax-material-utility/package.json
@@ -4,7 +4,9 @@
   "peerDependencies": {
     "@angular/common": "^14.1.0",
     "@angular/core": "^14.1.0",
-    "@angular/material": "^14.2.1"
+    "@angular/material": "^14.2.1",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
