--- a/projects/vedrax-material-utility/package.json
+++ b/projects/vedrax-material-utility/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vedrax-material-utility",
+  "name": "@vedrax/vedrax-material-utility",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^14.1.0",
